tests/hm_typing/empty_function.sy
f :: fn -> int do end

start :: fn do end
// error: $Mismatch { .. }

